# THERMOGNOSIS-X

./: .gitignore  AUDIT_REPORT.md  CHANGELOG.md  DELETED_FILES.md  VALIDATION_METHODOLOGY.md  allowed_properties.toml  push_to_github.sh  pyproject.toml  requirements.txt  tmp_log.ini  unit_registry.toml
config/: default.yaml  development.yaml  production.yaml
dataset/raw/: 00000844.json  00000941.json  00040076.json  00040077.json  00040078.json  00040079.json
doc/spec/00_governance/: code_generation_protocol.md  dependency_graph.md  error_hierarchy.md  global_conventions.md  naming_rules.md
doc/spec/01_contracts/: CONTRACT_material.md  CONTRACT_paper.md  CONTRACT_raw_measurement.md  CONTRACT_validated_measurement.md  CONTRACT_versioning.md
doc/spec/02_acquisition/: ACQ_checksum_spec.md  ACQ_crawler_spec.md  ACQ_downloader_spec.md  ACQ_pdf_validator_spec.md
doc/spec/03_extraction/: EXT_curve_digitizer_spec.md  EXT_material_parser_spec.md  EXT_table_extractor_spec.md  EXT_text_extractor_spec.md
doc/spec/04_unit_system/: UNIT_converter_spec.md  UNIT_dimensional_validation_spec.md  UNIT_registry_spec.md
doc/spec/05_physics/: PHYS_consistency_spec.md  PHYS_constraints_spec.md  PHYS_error_propagation_spec.md  PHYS_smooth_test_spec.md
doc/spec/06_quality/: QUAL_completeness_spec.md  QUAL_credibility_spec.md  QUAL_scoring_spec.md
doc/spec/07_identity_graph/: ID_embedding_rank_spec.md  ID_graph_storage_spec.md  ID_material_canonicalization_spec.md
doc/spec/08_storage/: DB_neo4j_schema_spec.md  DB_parquet_spec.md  DB_postgres_schema_spec.md  DB_versioning_spec.md
doc/spec/09_feedback/: FB_model_gap_spec.md  FB_query_planner_spec.md  FB_uncertainty_map_spec.md
doc/spec/99_integration/: PIPELINE_data_flow_spec.md  PIPELINE_end_to_end_spec.md  PIPELINE_orchestration_spec.md
doc/theory/00_foundations/: T00_system_axioms.md  T01_data_formalism.md  T02_measurement_space_definition.md  T03_uncertainty_propagation_theory.md
doc/theory/01_physics/: P01_thermoelectric_equations.md  P02_zT_error_propagation.md  P03_physical_constraints.md  P04_wiedemann_franz_limit.md
doc/theory/02_statistical_model/: S01_bayesian_credibility_model.md  S02_weighted_likelihood_formulation.md  S03_uncertainty_weighting.md  S04_outlier_modeling.md
doc/theory/03_graph_model/: G01_material_identity_graph.md  G02_citation_graph_dynamics.md  G03_embedding_rank_theory.md
doc/theory/04_closed_loop/: CL01_operator_definition.md  CL02_information_gain_selection.md  CL03_convergence_conditions.md
doc/theory/99_publication_draft/: figures_definition.md  paper_outline.md  theorem_registry.md
python/tests/: bayesian_tests.rs  entropy_tests.rs  generate_validation_table.py  synthetic_data.py  test_bayesian.py  test_benchmark.py  test_gap.py  test_ranking.py  test_reproducibility.py  test_stability.py
python/thermognosis/: config.py
python/thermognosis/dataset/: json_parser.py  parquet_writer.py
python/thermognosis/db/: bulk_writer.py  connection.py  schema.sql.txt
python/thermognosis/pipeline/: gap_detection.py  ingestion.py  orchestrator.py  ranking.py  result.py  scoring.py  validation.py
python/thermognosis/utils/: hashing.py  io.py
python/thermognosis/wrappers/: rust_wrapper.py
rust_core/: Cargo.toml
rust_core/src/: audit.rs  bayesian.rs  constants.rs  csv_engine.rs  dedup.rs  error_propagation.rs  flags.rs  information_gain.rs  interpolation.rs  lib.rs  memory_guard.rs  mirror_walker.rs  physics.rs  ranking_core.rs  scoring.rs  starrydata_parser.rs  statistics.rs  units.rs  validation.rs
scripts/: analysis_pipeline.py  build_starrydata_duckdb.py  generate_q1_dataset.py  ingest_api_pipeline.py  normalize_starrydata.py  phase4_filtered_vs_unfiltered.py  process_real_starrydata.py  q1_extreme_benchmark.py  run_starrydata_fast.py  starrydata_error_analysis.py  statistical_analysis.py  test_ingestion.py  test_parser.py
