[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thermognosis"
version = "0.1.0"
description = "Thermognosis Engine"
authors = [{name = "Thermognosis Research Group"}]
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["python"]
